@@ -5,6 +5,7 @@ use warnings;
 use Config;
 use SPVM::Builder::Util::API;
 
+my %configure_and_runtime_requires = ('SPVM' => '0.9689');
 WriteMakefile(
   NAME              => 'SPVM::Time::Local',
   VERSION_FROM      => 'lib/SPVM/Time/Local.pm',
@@ -25,9 +26,15 @@ WriteMakefile(
       },
     },
   },
-  # SPVM::Builder::Util::API is needed for Makefile.PL
+  NORECURS => 1,
   CONFIGURE_REQUIRES => {
-    'SPVM'              => '0.9610',
+    %configure_and_runtime_requires,
+  },
+  PREREQ_PM         => {
+    %configure_and_runtime_requires,
+  },
+  TEST_REQUIRES => {
+    
   },
 );
 
@@ -36,7 +43,6 @@ sub MY::postamble {
   my $make_rule = '';
   
   $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Time::Local');
-  
   
   return $make_rule;
 }
