@@ -6,6 +6,8 @@
   [Document Improvement]
     * Removed CAUTION section.
     * Improved document styles.
+  [Prerequiement Changes]
+    * SPVM 0.9689+ is needed.
 0.06 2022-06-28
   * Update documents
 0.05 2022-06-23
